--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,9 @@
     "require": {
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "^6.0",
-        "laravel/tinker": "^1.0"
+        "laravel/framework": "6.0.0",
+        "laravel/tinker": "^1.0",
+        "khwadj/laravel-utility-classes": "dev-develop"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
