--- a/composer.json
+++ b/composer.json
@@ -10,16 +10,16 @@
     "require": {
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
+        "khwadj/laravel-utility-classes": "dev-develop",
         "laravel/framework": "6.0.0",
         "laravel/tinker": "^1.0",
-        "khwadj/laravel-utility-classes": "dev-develop"
+        "laravel/ui": "^1.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "nunomaduro/collision": "^3.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -38,6 +38,9 @@
         "classmap": [
             "database/seeds",
             "database/factories"
+        ],
+        "files": [
+            "app/Helpers/TestHelper.php"
         ]
     },
     "autoload-dev": {
