--- a/composer.json
+++ b/composer.json
@@ -8,24 +8,20 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2",
-        "fideloper/proxy": "^4.0",
-        "khwadj/laravel-utility-classes": "dev-develop",
-        "laravel/framework": "6.2.0",
-        "laravel/tinker": "^1.0",
-        "laravel/ui": "^1.0"
+        "php": "^7.2.5",
+        "fideloper/proxy": "^4.2",
+        "fruitcake/laravel-cors": "^1.0",
+        "guzzlehttp/guzzle": "^6.3",
+        "laravel/framework": "^7.0",
+        "laravel/tinker": "^2.0"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": ">=3.2.6",
-        "filp/whoops": "^2.0",
-        "fzaninotto/faker": "^1.4",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0"
-    },
-    "config": {
-        "optimize-autoloader": true,
-        "preferred-install": "dist",
-        "sort-packages": true
+        "facade/ignition": "^2.0",
+        "fzaninotto/faker": "^1.9.1",
+        "mockery/mockery": "^1.3.1",
+        "nunomaduro/collision": "^4.1",
+        "phpunit/phpunit": "^8.5",
+        "khwadj/laravel-utility-classes": "dev-develop"
     },
     "extra": {
         "laravel": {
